...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageViewPoster"
                        tools:text="89" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
...
