...
                    app:layout_constraintStart_toStartOf="@+id/imageViewBackgroundTVShowDetail"
                    app:layout_constraintTop_toTopOf="@+id/imageViewBackgroundTVShowDetail"
                    app:tvshow_poster="@{model.uRLPosterPath}"
                    tools:srcCompat="@drawable/tvshow_poster_arrow" />

                <TextView
                    android:id="@+id/textViewTitleTVShowDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{model.name}"
...
